--- a/static/problem.html
+++ b/static/problem.html
@@ -56,7 +56,7 @@
               <td>
                 <a :href="'/problem/'+item.id"> {{ item.title }}</a>
               </td>
-        
+
               <td>{{ item.acceptNum==null?0:item.acceptNum }}</td>
 
               <td>{{ item.submitNum==null?0:item.submitNum }}</td>
@@ -64,11 +64,11 @@
           </tbody>
         </table>
 
-       <!-- <my-pager></my-pager> -->
+        <!-- <my-pager></my-pager> -->
       </template>
 
     </div>
-    <auth-modal></auth-modal>
+    <auth-modal v-bind:errorinfo='errorinfo'></auth-modal>
     <my-footer></my-footer>
   </div>
   <script>
@@ -79,7 +79,11 @@
       list: [],
       userinfo: {},
       loading: true,
-      is404: false
+      is404: false,
+      errorinfo: {
+        type: 0,
+        msg: ''
+      }
     };
 
     axios.get('/api/u/info', {
@@ -89,8 +93,13 @@
         ld.userinfo = response.data.data
       })
       .catch(function (error) {
+        if (/50\d/.test(error.response.status)) {
+          ld.errorinfo.type = 500;
+        } else {
+          ld.errorinfo.type = 400;
+          ld.errorinfo.msg = error.response.data.msg;
+        }
         $('.ui.basic.modal').modal('show');
-        $('#modalmsg').text(error.response.data.msg)
         $(":root").delay(3000).queue(function () {
           $('.ui.basic.modal').modal('hide');
           window.location.href = "/login";
