--- a/static/problem_detail.html
+++ b/static/problem_detail.html
@@ -143,7 +143,7 @@
 
     </div>
 
-    <auth-modal></auth-modal>
+    <auth-modal v-bind:errorinfo='errorinfo'></auth-modal>
     <my-footer></my-footer>
 
   </div>
@@ -164,7 +164,11 @@
       posting: false,
       object1: {},
       loading: true,
-      is404: false
+      is404: false,
+      errorinfo: {
+        type: 0,
+        msg: ''
+      }
     };
 
     var pathId = getPathId();
@@ -178,8 +182,13 @@
         ld.userinfo = response.data.data
       })
       .catch(function (error) {
+        if (/50\d/.test(error.response.status)) {
+          ld.errorinfo.type = 500;
+        } else {
+          ld.errorinfo.type = 400;
+          ld.errorinfo.msg = error.response.data.msg;
+        }
         $('.ui.basic.modal').modal('show');
-        $('#modalmsg').text(error.response.data.msg)
         $(":root").delay(3000).queue(function () {
           $('.ui.basic.modal').modal('hide');
           window.location.href = "/login";
