--- a/static/topic.html
+++ b/static/topic.html
@@ -74,10 +74,12 @@
               <td>
                 <a :href="'/topic/'+item.id">{{ item.title }}</a>
               </td>
-              <td v-if="item.topicStatus=1">
+              <td v-if="item.topicStatus==1">
                 <i class="icon checkmark"></i> 进行中</td>
-              <td v-if="item.topicStatus=0">
+              <td v-if="item.topicStatus==0">
                 <i class="icon close"></i> 已关闭</td>
+              <td v-if="item.topicStatus==-1">
+                <i class="icon clock"></i> 未开始</td>
               <td>{{item.creator}}</td>
             </tr>
           </tbody>
