修复批量添加学生失败的bug

--- a/static/master.html
+++ b/static/master.html
@@ -554,7 +554,7 @@
           postStuAdd(this.form_stu.id, this.form_stu.password, this.form_stu.classes_flag);
         },
         stuaddmuti: function () {
-          postStuAddMuti(this.form_stu_muti.arg0, this.form_stu_muti.arg1, this.form_stu_muti.password, this.form_stu.classes_flag);
+          postStuAddMuti(this.form_stu_muti.arg0, this.form_stu_muti.arg1, this.form_stu_muti.password, this.form_stu_muti.classes_flag);
         },
         topicadd: function () {
           postTopicAdd(this.form_topic.title, this.form_topic.begin_time, this.form_topic.end_time, this.form_topic.class_flag);
